--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ https://github.com/Mahesh0253/pyrogram/archive/inline.zip
 TgCrypto
 motor
 aiofiles
-dnspython
+dnspython==2.3.0
 psutil
 sqlalchemy==1.3.23
 tmdbv3api
@@ -12,7 +12,7 @@ markdown
 Flask==2.2.2
 gunicorn==20.1.0
 aiohttp==3.8.4
-pymongo[srv]==3.12.3
+pymongo[srv]==4.3.3
 bs4
 heroku3
 validators
