--- a/app.json
+++ b/app.json
@@ -43,6 +43,7 @@
         "HOME_TEXT": {
             "description": "Good Bye Msg"
             "required": false,
+            "value": "False"
         },
         "START_MSG": {
             "description": "Type Anything You Want"
@@ -51,13 +52,13 @@
         "START_PHOTO": {
             "description": "Add Your Photo Link"
             "required": false,
+            "value": "False"
         },
         "DATABASE_URL": {
             "description": "MongoDB Database URI for Saving UserID for Broadcast."
         },
         "UPDATES_CHANNEL": {
             "description": "ID of a Channel which you want to do Force Sub to use the bot. Example: -100123456789",
-            "required": false
         },
         "CHANNEL_ID": {
             "description": "Channel ID for Searching Messages.",
@@ -69,6 +70,7 @@
         "UPDATES_CHANNEL_USERNAME":{
             "description": "Username of the Channel you entered on UPDATES_CHANNEL without @",
             "required": false
+            "value": "False"
         },
         "RESULTS_COUNT":{
             "description": "Count of the number of Results",
@@ -88,10 +90,12 @@
         "HELP_TEXT": {
             "description": "Type Anything You Want"    
             "required": false,
+            "value": "False"
         },
         "ABOUT_TEXT": {
             "description": "Type Anything You Want"
             "required": false,
+            "value": "False"
         },    
         "MDISK_API":{
             "description": "Mdisk API",
