--- a/app.json
+++ b/app.json
@@ -40,11 +40,21 @@
         "BACKUP_CHANNEL": {
             "description": "Bot Backup Channel Without @"
         },
+        "HOME_TEXT": {
+            "description": "Good Bye Msg"
+        },
+        "START_MSG": {
+            "description": "Type Anything You Want"
+        },
+        "START_PHOTO": {
+            "description": "Add Your Photo Link"
+        },
         "DATABASE_URL": {
             "description": "MongoDB Database URI for Saving UserID for Broadcast."
         },
         "UPDATES_CHANNEL": {
             "description": "ID of a Channel which you want to do Force Sub to use the bot. Example: -100123456789",
+            "required": false
         },
         "CHANNEL_ID": {
             "description": "Channel ID for Searching Messages.",
@@ -52,6 +62,10 @@
         },
         "LOG_CHANNEL": {
             "description": "Log Channel to send bin messages"
+        },
+        "UPDATES_CHANNEL_USERNAME":{
+            "description": "Username of the Channel you entered on UPDATES_CHANNEL without @",
+            "required": false
         },
         "RESULTS_COUNT":{
             "description": "Count of the number of Results",
@@ -68,6 +82,12 @@
             "required": false,
             "value": "False"
         },
+        "HELP_TEXT": {
+            "description": "Type Anything You Want"    
+        },
+        "ABOUT_TEXT": {
+            "description": "Type Anything You Want"
+        },    
         "MDISK_API":{
             "description": "Mdisk API",
             "required": true,
